# AI-assistant

./: .gitignore  README.md  config.example.yaml  main.py  mcp_server.py  pyproject.toml  requirements.txt  run.py
src/ai_ops_assistant/: __init__.py  asset_db.py  cli.py  config.py  llm.py  orchestrator.py  session_db.py  ssh_executor.py
static/: about.html  assets.html  index.html
